WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13366
REGRESSION (
r10935
): AOL beta music player doesn't play
https://bugs.webkit.org/show_bug.cgi?id=13366
Summary
REGRESSION (r10935): AOL beta music player doesn't play
Troy Brandt
Reported
2007-04-16 15:31:19 PDT
If you visit the page above you'll be presented with a list of songs. Click the play link to the right to open a pop-up with the player contained within. In Safari Version 2.0.4 (419.3) the song immediately starts playing. In WebKit
r20897
the player appears to load but doesn't ever start playing and the controls don't work. It looks like it fails to load up the song for play. I'll included a reduction however someone may be able to get it reduced down a bit further.
Attachments
reduction
(50.34 KB, text/html)
2007-04-16 15:33 PDT
,
Troy Brandt
no flags
Details
The qt script file referenced in Javascript console
(44.25 KB, text/plain)
2007-06-15 21:17 PDT
,
David Carson
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Troy Brandt
Comment 1
2007-04-16 15:33:34 PDT
Created
attachment 14056
[details]
reduction
David Carson
Comment 2
2007-06-15 21:16:35 PDT
According to the Javascript console, there was a TypeError: NULL value on line 1382 of:
http://nsvapp-prod-rr.stream.aol.com:80/283/qt.js
David Carson
Comment 3
2007-06-15 21:17:38 PDT
Created
attachment 15077
[details]
The qt script file referenced in Javascript console
David Carson
Comment 4
2007-06-15 21:18:42 PDT
Full details of JS console error: [21325]
http://nsvapp-prod-rr.stream.aol.com:80/fugu?t=uni&tsize=uni&mac=1&tzone=-8&pmmsid=1803379&s1=Fergie&s2=The%20Dutchess&s3=%27Glamorous%27%20feat.%20Ludacris&live=0&angle=0&startpos=0&startpos=0&lpos=0&ppos=0&poffset=0&event=&maxbps=0&skin=grey&width=320&height=77&aspect=4&video=false&showui=1&prefs=1&pid=DL&brand=AOL&player=fls&len=246&country=US&company=AOL&version=1.0&franchise=MUSIC%3A%20Audio%20General&showads=0&locale=US&autoplay=true&mtrack=1&curtainExpand=top&gender=&age=&daypart=&dma=&genre=MUSIC%20-%20Pop&cpid=pmmsid%3A1803379&windowedFullscreen=true&surfacePoint=us.aol.music.newsongs_newsongs&sync=1&restartUrl=mode%3D0%26pmmsid%3D1803379%26referer%3Dhttp%253A//music.aol.com/songs/newsongs
line 1382: TypeError: Null value
David Carson
Comment 5
2007-07-05 22:38:15 PDT
using nightly.webkit.org, I went back to the first release,
r11976
, and the problem still exists there.
David Carson
Comment 6
2007-07-16 11:01:37 PDT
regression was introduced in
r10936
when correcting the bug:
http://bugs.webkit.org/show_bug.cgi?id=5449
Added mitz to CC list as he corrected the bug
David Kilzer (:ddkilzer)
Comment 7
2007-07-17 07:38:35 PDT
Code change:
http://trac.webkit.org/projects/webkit/changeset/10935
Layout test:
http://trac.webkit.org/projects/webkit/changeset/10936
David Kilzer (:ddkilzer)
Comment 8
2007-07-17 07:38:54 PDT
<
rdar://problem/5340098
>
David Kilzer (:ddkilzer)
Comment 9
2007-07-18 17:10:17 PDT
7/18/07 3:56 PM Anders Carlsson: Here's the problem: The qt.js file has a typo, causing it to write document.write("<embed" + "\" width=" + width + " height=" + height this will result in a tag with the name <embed" (note the extra character at the end). This causes Safari to not recognize the embed element.
David Kilzer (:ddkilzer)
Comment 10
2007-07-18 17:11:07 PDT
Should we evangelize AOL to fix this issue as well?
David Kilzer (:ddkilzer)
Comment 11
2007-07-18 17:12:09 PDT
Fixed by andersca in r 24429.
David Kilzer (:ddkilzer)
Comment 12
2007-07-18 21:58:26 PDT
(In reply to
comment #10
)
> Should we evangelize AOL to fix this issue as well?
Sent feedback to AOL via the "Send Us Feedback" link on
http://music.aol.com/songs/newsongs
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug