LayoutTests:

Reviewed by Darin.

        <rdar://problem/5340098>
        http://bugs.webkit.org/show_bug.cgi?id=13366
        REGRESSION (r10935): AOL beta music player doesn't play

        * fast/dom/HTMLDocument/object-by-name-unknown-child-element-expected.txt: Added.
        * fast/dom/HTMLDocument/object-by-name-unknown-child-element.html: Added.

WebCore:

        Reviewed by Darin.

        <rdar://problem/5340098>
        http://bugs.webkit.org/show_bug.cgi?id=13366
        REGRESSION (r10935): AOL beta music player doesn't play

        The AOL beta music player has a typo, causing it to create an <embed"> element inside of
        an <object> element
        Because of this, it will not be treated as an embed tag, so its name will not be added
        to the document's named item map. Furthermore, since the <object> contains a child that
        is not a <param>, the object's name won't be added either.

        The (somewhat ugly) fix is to add <object> to the named map only if it has <param> or
        unknown elements as children.

        * html/HTMLObjectElement.cpp:
        (WebCore::HTMLObjectElement::updateDocNamedItem):



Canonical link: https://commits.webkit.org/19080@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24429 268f45cc-cd09-0410-ab3c-d52691b4dbfc